--- a/site/Mod3-solution.html
+++ b/site/Mod3-solution.html
@@ -15,7 +15,7 @@
     <title>Module 3 solution </title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="/Module3.css">
+    <link rel="stylesheet" href="/site/Module3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jomhuria&display=swap" rel="stylesheet">
