--- a/site/Mod3-solution.html
+++ b/site/Mod3-solution.html
@@ -15,13 +15,81 @@
     <title>Module 3 solution </title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="/site/Module3.css">
+    <link rel="stylesheet" href="Module3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jomhuria&display=swap" rel="stylesheet">
   </head>
 <body>
   <header>
+<style>
+  *{
+  font-family: 'jomhuria', sans-serif;
+}
+
+body{
+
+  font-size: 20px;
+  color: #333;
+  background-color: #a0a0a0
+  ;
+}
+
+.navbar {
+  background-color: white;
+  height: 70px;
+  position: relative;
+  text-decoration: none;
+  border: 0;
+  border-radius: 0;
+  z-index:  1000;
+}
+.navbar-brand h1{
+  padding-top: 0;
+  margin: 0%;
+  color:  #333;
+  font-size: 2em;
+  position: relative;
+
+}
+.navbar-brand h1:hover{
+  padding-top: 0;
+  margin: 0;
+  color: blue;
+  font-size: 2em;
+}
+.collapse .navbar-collapse {
+  position: relative;
+  margin-left: 50%;
+  background-color: ;
+}
+.dropdown-menu{
+  margin-left: 50%;
+  text-align: center;
+  font-size: 1.3em;
+  background-color:  white;
+}
+.navbar-collapse {
+  background-color:  white;
+  text-align:  center;
+  font-size: 2em;
+}
+h1{
+margin: 2% 40%;
+}
+
+.card{
+  margin: 20px;
+}
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+
+</style>    
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><h1>Atlanta's Best Wings</h1></a>
